syntax = "proto3";

package message_bus.producer;

import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_outer_classname = "MessageProducerRequestProtos";
option java_package = "com.volmyr.message_bus.producer";

enum RequestType {
  TYPE1 = 0;
  TYPE2 = 1;
}

message MessageProducerRequest {
  string id = 1;
  int64 created_timestamp = 3;
  RequestType type = 5;
  oneof data {
    string string_data = 20;
    google.protobuf.Any any_data = 50;
  }
}
